--- a/package.json
+++ b/package.json
@@ -16,15 +16,29 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "@truffle/contract": "^4.4.1",
+    "@web3auth/core": "^4.3.0",
+    "@web3auth/openlogin-adapter": "^4.3.0",
+    "@web3auth/web3auth-wagmi-connector": "^2.1.1",
+    "assert": "^2.0.0",
+    "autoprefixer": "^10.4.13",
     "axios": "^1.2.1",
+    "buffer": "^6.0.3",
     "cors": "^2.8.5",
+    "crypto-browserify": "^3.12.0",
+    "crypto-js": "^3.1.9-1",
     "ethers": "^5.7.2",
     "formik": "^2.2.9",
+    "https-browserify": "^1.0.0",
     "jotai": "^1.11.1",
     "moment": "^2.29.4",
     "nodemon": "^2.0.15",
     "openzeppelin-solidity": "4.6.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "postcss": "^8.4.21",
+    "process": "^0.11.10",
     "react": "^18.2.0",
+    "react-app-rewired": "^2.2.1",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
     "react-material-ui-carousel": "^3.4.2",
@@ -32,7 +46,10 @@
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-razorpay": "^1.2.0",
     "react-router-dom": "^6.4.3",
-    "react-scripts": "5.0.1",
+    "react-scripts": "^5.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "url": "^0.11.0",
     "web-vitals": "^2.1.4",
     "web3": "^1.8.1",
     "yup": "^0.32.11"
