puching code for web3auth

--- a/package.json
+++ b/package.json
@@ -12,52 +12,49 @@
     "@mui/styled-engine": "^5.10.16",
     "@mui/x-date-pickers": "^5.0.15",
     "@openzeppelin/contracts": "^4.8.0",
+    "@rainbow-me/rainbowkit": "^0.8.1",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "@toruslabs/eccrypto": "^1.1.8",
     "@truffle/contract": "^4.4.1",
     "@web3auth/core": "^4.3.0",
     "@web3auth/openlogin-adapter": "^4.3.0",
     "@web3auth/web3auth-wagmi-connector": "^2.1.1",
-    "assert": "^2.0.0",
     "autoprefixer": "^10.4.13",
     "axios": "^1.2.1",
-    "buffer": "^6.0.3",
     "cors": "^2.8.5",
-    "crypto-browserify": "^3.12.0",
+    "crypto": "^1.0.1",
     "crypto-js": "^3.1.9-1",
+    "dotenv": "^16.0.3",
     "ethers": "^5.7.2",
     "formik": "^2.2.9",
-    "https-browserify": "^1.0.0",
     "jotai": "^1.11.1",
     "moment": "^2.29.4",
     "nodemon": "^2.0.15",
     "openzeppelin-solidity": "4.6.0",
-    "os-browserify": "^0.3.0",
+    "os": "^0.1.2",
     "path-browserify": "^1.0.1",
     "postcss": "^8.4.21",
-    "process": "^0.11.10",
     "react": "^18.2.0",
-    "react-app-rewired": "^2.2.1",
     "react-detect-offline": "^2.4.5",
     "react-dom": "^18.2.0",
+    "react-google-login": "^5.2.2",
     "react-material-ui-carousel": "^3.4.2",
     "react-qr-code": "^2.0.11",
     "react-qr-scanner": "^1.0.0-alpha.11",
     "react-razorpay": "^1.2.0",
     "react-router-dom": "^6.4.3",
     "react-scripts": "^5.0.1",
-    "stream-browserify": "^3.0.0",
-    "stream-http": "^3.2.0",
-    "url": "^0.11.0",
+    "stream": "^0.0.2",
     "web-vitals": "^2.1.4",
     "web3": "^1.8.1",
     "yup": "^0.32.11"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
-    "test": "react-scripts test",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
+    "test": "react-app-rewired test",
     "eject": "react-scripts eject"
   },
   "eslintConfig": {
@@ -77,5 +74,22 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "assert": "^2.0.0",
+    "autoprefixer": "^10.4.13",
+    "buffer": "^6.0.3",
+    "crypto-browserify": "^3.12.0",
+    "https-browserify": "^1.0.0",
+    "os-browserify": "^0.3.0",
+    "path-browserify": "^1.0.1",
+    "postcss": "^8.4.20",
+    "process": "^0.11.10",
+    "react-app-rewired": "^2.2.1",
+    "react-scripts": "5.0.1",
+    "stream-browserify": "^3.0.0",
+    "stream-http": "^3.2.0",
+    "tailwindcss": "^3.2.4",
+    "url": "^0.11.0"
   }
 }
