--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@mui/x-date-pickers": "^5.0.15",
     "@openzeppelin/contracts": "^4.8.0",
     "@rainbow-me/rainbowkit": "^0.8.1",
+    "@react-oauth/google": "^0.7.0",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
